--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://subconverter.oss-ap-southeast-1.al
 VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://subapi.52088088.xyz"
 
 # 短链接后端
-VUE_APP_MYURLS_DEFAULT_BACKEND = "https://v1.mk"
+VUE_APP_MYURLS_DEFAULT_BACKEND = "https://s.love.cv"
 
 # 文本托管后端
 VUE_APP_CONFIG_UPLOAD_BACKEND = "https://subapi.52088088.xyz"
